# wsd-to-svg

./: .gitignore  README.md  pyproject.toml  wsd_to_svg.py
ports/c-sharp/: Program.cs  README.md  WsdToSvg.csproj
