[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wsd-to-svg"
version = "1.0.0"
description = "Render Web Sequence Diagram (.wsd) files to SVG using websequencediagrams.com API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Bruce Kiefer"}
]
keywords = ["wsd", "web-sequence-diagram", "svg", "diagram", "sequence-diagram"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
wsd-to-svg = "wsd_to_svg:main"

[project.urls]
Homepage = "https://github.com/packetsdontlie/wsd-to-svg"
Repository = "https://github.com/packetsdontlie/wsd-to-svg"
Issues = "https://github.com/packetsdontlie/wsd-to-svg/issues"

[tool.setuptools]
py-modules = ["wsd_to_svg"]

[tool.setuptools.package-data]
"*" = ["*.wsd", "*.md"]

